--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,9 +101,10 @@ dependencies {
     // Developer tools (Developer Settings)
     compile libraries.stetho
     compile libraries.leakCanary
-    compile libraries.tinyDancer
+//    compile libraries.tinyDancer
     compile libraries.lynx
     compile libraries.processPhoenix
+
 
     testCompile libraries.junit
     testCompile libraries.robolectric
