--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,15 +2,16 @@ ext.versions = [
         code                         : 1,
         name                         : '1.0',
 
-        minSdk                       : 16,
+        minSdk                       : 15,
         targetSdk                    : 23,
         compileSdk                   : 23,
         buildTools                   : '23.0.3',
 
-        androidGradlePlugin          : '2.2.0-alpha4',
+        androidGradlePlugin          : '2.1.2',
         aptGradlePlugin              : '1.8',
         retrolambdaGradlePlugin      : '3.2.5',
         lombokGradlePlugin           : '0.2.3.a2',
+        paperworkGradlePlugin        : '1.2.7',
         jacocoGradlePlugin           : '0.7.6.201602180812',
         androidDevMetricsGradlePlugin: '0.4',
         errorProneVersion            : '0.0.8',
@@ -27,7 +28,7 @@ ext.versions = [
         espresso                     : '2.2.1',
         stetho                       : '1.3.1',
         leakCanary                   : '1.4-beta2',
-        tinyDancer                   : '0.0.8',
+//        tinyDancer                   : '0.0.8',
         lynx                         : '1.6',
         processPhoenix               : '1.0.2',
 
@@ -44,6 +45,7 @@ ext.gradlePlugins = [
         apt              : "com.neenbedankt.gradle.plugins:android-apt:$versions.aptGradlePlugin",
         retrolambda      : "me.tatarka:gradle-retrolambda:$versions.retrolambdaGradlePlugin",
         lombok           : "me.tatarka.retrolambda.projectlombok:lombok.ast:$versions.lombokGradlePlugin",
+        paperwork        : "hu.supercluster:paperwork-plugin:$versions.paperworkGradlePlugin",
         jacoco           : "org.jacoco:org.jacoco.core:$versions.jacocoGradlePlugin",
         androidDevMetrics: "com.frogermcs.androiddevmetrics:androiddevmetrics-plugin:$versions.androidDevMetricsGradlePlugin",
         errorProne       : "net.ltgt.gradle:gradle-errorprone-plugin:$versions.errorProneVersion",
@@ -70,7 +72,8 @@ ext.libraries = [
         // Developer Tools
         stetho                  : "com.facebook.stetho:stetho:$versions.stetho",
         leakCanary              : "com.squareup.leakcanary:leakcanary-android:$versions.leakCanary",
-        tinyDancer              : "com.github.brianPlummer:tinydancer:$versions.tinyDancer",
+//        tinyDancer              : "com.github.brianPlummer:tinydancer:$versions.tinyDancer",
+        paperwork               : "hu.supercluster:paperwork:$versions.paperworkGradlePlugin",
         lynx                    : "com.github.pedrovgs:lynx:$versions.lynx",
         devMetricsNoOp          : "com.frogermcs.androiddevmetrics:androiddevmetrics-runtime-noop:$versions.androidDevMetricsGradlePlugin",
         processPhoenix          : "com.jakewharton:process-phoenix:$versions.processPhoenix",
