--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,8 @@ dependencies {
     compile libraries.supportRecyclerView
     compile libraries.supportCardView
 
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     compile libraries.butterKnife
     apt libraries.butterKnifeCompiler
 
